archive-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archive-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archiveservice
  template:
    metadata:
      labels:
        app: archiveservice
    spec:
      containers:
        - name: archiveservice
          image: dreamoove/archive-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: archive-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: archiveservice-server-lb
spec:
  type: LoadBalancer
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: archiveservice-server-np
spec:
  type: NodePort
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
