archive-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: archiveservice-server
spec:
  type: NodePort
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
