commentary-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: commentaryservice-server
spec:
  type: NodePort
  selector:
    app: commentaryservice
  ports:
    - name: commentaryservice
      protocol: TCP
      port: 80
      targetPort: 80
