contact-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contactservice
  template:
    metadata:
      labels:
        app: contactservice
    spec:
      containers:
        - name: contactservice
          image: dreamoove/contact-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: contact-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: contactservice
  ports:
    - name: contactservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: contactservice-server-lb
spec:
  type: LoadBalancer
  selector:
    app: contactservice
  ports:
    - name: contactservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: contactservice-server-np
spec:
  type: NodePort
  selector:
    app: contactservice
  ports:
    - name: contactservice
      protocol: TCP
      port: 80
      targetPort: 80
