contact-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: contactservice-server
spec:
  type: NodePort
  selector:
    app: contactservice
  ports:
    - name: contactservice
      protocol: TCP
      port: 80
      targetPort: 80
