event-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eventservice
  template:
    metadata:
      labels:
        app: eventservice
    spec:
      containers:
        - name: eventservice
          image: enzo3442/dreamoove-service-dreamoove:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: eventservice
  ports:
    - name: eventservice
      protocol: TCP
      port: 80
      targetPort: 80
