like-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: likeservice-server
spec:
  type: NodePort
  selector:
    app: likeservice
  ports:
    - name: likeservice
      protocol: TCP
      port: 80
      targetPort: 80
