nodeport-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: archiveservice-server-np
spec:
  type: NodePort
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: commentaryservice-server-np
spec:
  type: NodePort
  selector:
    app: commentaryservice
  ports:
    - name: commentaryservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: contactservice-server-np
spec:
  type: NodePort
  selector:
    app: contactservice
  ports:
    - name: contactservice
      protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: v1
kind: Service
metadata:
  name: eventservice-server-np
spec:
  type: NodePort
  selector:
    app: eventservice
  ports:
    - name: eventservice
      protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: v1
kind: Service
metadata:
  name: friendservice-server-np
spec:
  type: NodePort
  selector:
    app: friendservice
  ports:
    - name: friendservice
      protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: v1
kind: Service
metadata:
  name: likeservice-server-np
spec:
  type: NodePort
  selector:
    app: likeservice
  ports:
    - name: likeservice
      protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: v1
kind: Service
metadata:
  name: publicationservice-server-np
spec:
  type: NodePort
  selector:
    app: publicationservice
  ports:
    - name: publicationservice
      protocol: TCP
      port: 80
      targetPort: 80    
---
apiVersion: v1
kind: Service
metadata:
  name: sportservice-server-np
spec:
  type: NodePort
  selector:
    app: sportservice
  ports:
    - name: sportservice
      protocol: TCP
      port: 80
      targetPort: 80     
---
apiVersion: v1
kind: Service
metadata:
  name: storyservice-server-np
spec:
  type: NodePort
  selector:
    app: storyservice
  ports:
    - name: storyservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-server-np
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 80
