publication-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publication-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publicationservice
  template:
    metadata:
      labels:
        app: publicationservice
    spec:
      containers:
        - name: publicationservice
          image: dreamoove/publication-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: publication-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: publicationservice
  ports:
    - name: publicationservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: publicationservice-server-lb
spec:
  type: LoadBalancer
  selector:
    app: publicationservice
  ports:
    - name: publicationservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: publicationservice-server-np
spec:
  type: NodePort
  selector:
    app: publicationservice
  ports:
    - name: publicationservice
      protocol: TCP
      port: 80
      targetPort: 80
