publication-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: publicationservice-server
spec:
  type: NodePort
  selector:
    app: publicationservice
  ports:
    - name: publicationservice
      protocol: TCP
      port: 80
      targetPort: 80
