story-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storyservice
  template:
    metadata:
      labels:
        app: storyservice
    spec:
      containers:
        - name: storyservice
          image: dreamoove/story-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: story-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: storyservice
  ports:
    - name: storyservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: storyservice-server-lb
spec:
  type: LoadBalancer
  selector:
    app: storyservice
  ports:
    - name: storyservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: storyservice-server-np
spec:
  type: NodePort
  selector:
    app: storyservice
  ports:
    - name: storyservice
      protocol: TCP
      port: 80
      targetPort: 80
