user-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: enzo3442/user-service-dreamoove:latest
---
apiVersion: v1
kind: Service
metadata:
  name: sport-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: sportservice
  ports:
    - name: sportservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: LoadBalancer
  selector:
    app: userservice
  ports:
  - port: 80
    targetPort: 8080
