user-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-server
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 80
